--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: abdelrhman322 # the main title
+title: abdelrhman322 
 
 tagline: DFIR | CTF Player @L3ak & Author# it will display as the subtitle
 
-description: >- # used by seo meta and the atom feed
+description: >- 
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar:/images/my_image.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
