--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: abdelrhman322 
 
-tagline: DFIR | CTF Player @L3ak & Author# it will display as the subtitle
+tagline: DFIR | CTF Player @L3ak & Author
 
 description: >- 
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
